test/syc/bad/shortshort.c
/*
 * Two short specifiers
 */

short short a;
